Fixed the color contrast

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -396,6 +396,10 @@ button.page-link:active:focus {
 
 }
 
+.assignment-icon {
+  color: #2F6AC1;
+}
+
 
 
 
